--- a/app/src/main/res/layout/item_asset.xml
+++ b/app/src/main/res/layout/item_asset.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
+    android:layout_marginBottom="8dp"
     android:background="@android:color/black">
 
     <TextView
@@ -22,4 +23,13 @@
         android:text="Details"
         android:textColor="@android:color/white"
         android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/textViewOrderCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:text="Orders: 0"
+        android:textSize="18sp"
+        android:layout_marginTop="4dp" />
 </LinearLayout>
