--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,13 +60,16 @@
 
     <TextView
         android:id="@+id/fragment_label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Fragment Label"
         android:textColor="@android:color/black"
         android:textSize="16sp"
+        android:textAllCaps="true"
+        android:textStyle="bold"
+        android:textAlignment="textStart"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent" />
 
