--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/black"
     android:theme="@style/Theme.CS388_Group12_StockPath">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="4dp"
+        android:elevation="0dp"
         android:fitsSystemWindows="true"
+        android:background="@color/green"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -25,7 +27,7 @@
             android:layout_gravity="start"
             android:paddingStart="16dp"
             android:text="StockPath"
-            android:textColor="@android:color/black"
+            android:textColor="@color/black"
             android:textSize="34sp" />
 
         <LinearLayout
@@ -62,11 +64,12 @@
         android:id="@+id/fragment_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="Fragment Label"
-        android:textColor="@android:color/black"
-        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:background="@color/green"
+        android:textSize="12sp"
         android:textAllCaps="true"
         android:textStyle="bold"
         android:textAlignment="textStart"
@@ -91,7 +94,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/green"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
