--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true"
+    android:background="@color/green"
     android:theme="@style/Theme.CS388_Group12_StockPath">
 
     <androidx.appcompat.widget.Toolbar
@@ -13,9 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="4dp"
-        android:fitsSystemWindows="true"
-
-        >
+        android:background="@color/green">
 
         <TextView
             android:id="@+id/stockpath_header"
@@ -52,19 +51,19 @@
                 android:layout_gravity="right"
                 android:backgroundTint="@color/black"
                 android:text="Guest Login"
-                android:textColor="@android:color/white"
                 android:textSize="10sp" />
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
     <TextView
         android:id="@+id/fragment_label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="Log In"
         android:textColor="@android:color/black"
+        android:textStyle="bold"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
@@ -81,6 +80,8 @@
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,6 +98,8 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
