--- a/app/src/main/res/layout/add_alert.xml
+++ b/app/src/main/res/layout/add_alert.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/green"
     android:fitsSystemWindows="true"
     android:theme="@style/Theme.CS388_Group12_StockPath">
 
@@ -13,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="4dp"
+        android:background="@color/green"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -24,7 +26,7 @@
             android:layout_gravity="start"
             android:paddingStart="16dp"
             android:text="StockPath"
-            android:textColor="@android:color/black"
+            android:textColor="@color/black"
             android:textSize="34sp" />
 
         <LinearLayout
@@ -64,6 +66,8 @@
         android:layout_height="wrap_content"
         android:hint="Search Asset"
         android:inputType="text"
+        android:textColor="@color/black"
+        android:background="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
@@ -76,6 +80,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Search"
+        android:background="@color/blue"
+        android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@id/editTextSearchAsset"
         app:layout_constraintTop_toTopOf="@+id/editTextSearchAsset"
         app:layout_constraintBottom_toBottomOf="@+id/editTextSearchAsset"
@@ -87,6 +93,8 @@
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginTop="8dp"
+        android:textColor="@color/black"
+        android:background="@color/green"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextSearchAsset"
@@ -99,6 +107,7 @@
         android:layout_height="wrap_content"
         android:text="Selected Asset: None"
         android:textSize="16sp"
+        android:textColor="@color/black"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,6 +121,7 @@
         android:layout_height="wrap_content"
         android:hint="Alert Price"
         android:inputType="numberDecimal"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewSelectedAsset"
@@ -126,6 +136,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPrice"
@@ -137,13 +148,18 @@
             android:id="@+id/radioAbove"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Above Price" />
+            android:text="Above Price"
+            android:background="@color/black"
+            android:textColor="@color/green"/>
 
         <RadioButton
             android:id="@+id/radioBelow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Below Price" />
+            android:text="Below Price"
+            android:background="@color/black"
+
+            android:textColor="@color/red"/>
     </RadioGroup>
 
     <Button
