--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".ui.home.HomeFragment">
 
     <TextView
         android:id="@+id/text_home"
         android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="0dp"
         android:background="@color/black"
         android:textColor="@android:color/white"
-        android:textSize="15sp"
+        android:textSize="10sp"
         android:textAllCaps="true"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,51 +31,64 @@
         android:id="@+id/label_Assets"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:text="Assets"
         android:textAllCaps="true"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:background="@color/black"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
+        android:background="@color/green"
+        android:textColor="@color/black"
+        android:textSize="10sp"
         app:layout_constraintTop_toBottomOf="@id/text_home"
-         />
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewAssets"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="2dp"
+        android:layout_marginStart="0dp"
+        android:background="@color/black"
         app:layout_constraintTop_toBottomOf="@id/label_Assets"
-        app:layout_constraintBottom_toTopOf="@id/button_add_order"
+        app:layout_constraintBottom_toTopOf="@id/buttonbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
-        android:id="@+id/button_add_order"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_margin="5dp"
-        android:text="+\nOrder"
-        android:textSize="9dp"
-        android:textColor="@android:color/white"
-        android:backgroundTint="@android:color/black"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/buttonbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/button_add_alert" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recyclerViewAssets">
 
-    <Button
-        android:id="@+id/button_add_alert"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_margin="5dp"
-        android:text="+\nAlert"
-        android:textSize="9dp"
-        android:textColor="@android:color/white"
-        android:background="@drawable/circle_shape"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/button_add_order"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/button_add_order"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_margin="1dp"
+                android:backgroundTint="@color/black"
+                android:text="NEW\nOrder\n+"
+                android:textColor="@color/white"
+                android:textSize="8dp" />
+
+            <Button
+                android:id="@+id/button_add_alert"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_margin="1dp"
+                android:backgroundTint="@color/black"
+                android:text="NEW\nAlert\n+"
+                android:textColor="@color/white"
+                android:textSize="8dp" />
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
 </androidx.constraintlayout.widget.ConstraintLayout>
