--- a/app/src/main/res/layout/item_asset.xml
+++ b/app/src/main/res/layout/item_asset.xml
@@ -6,15 +6,15 @@
     android:orientation="vertical"
     android:padding="8dp"
     android:layout_marginBottom="8dp"
-    android:background="@android:color/black">
+    android:background="@color/green">
 
     <TextView
         android:id="@+id/textViewAssetSymbol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Asset Symbol"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:textSize="12sp"
         android:textStyle="bold" />
 
     <TextView
@@ -22,16 +22,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Details"
-        android:textColor="@android:color/white"
-        android:textSize="14sp" />
+        android:textColor="@color/black"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/textViewOrderCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
+        android:textColor="@color/black"
         android:text="Orders: 0"
-        android:textSize="18sp"
+        android:textSize="12sp"
         android:layout_marginTop="4dp" />
 
     <TextView
@@ -42,6 +42,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Current Price: $0.00"
-        android:textColor="@android:color/white"
-        android:textSize="25sp" />
+        android:textColor="@color/black"
+        android:textSize="12sp" />
 </LinearLayout>
